# semantic-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT.json  README.md  pyproject.toml
examples/: multi-agent-tmux-setup.sh
src/mcp_runtime/: main.py  mcp_server.py  models.py  runtime_engine.py
src/mcp_runtime/services/: discovery_client.py
src/mcpruntime/: mcp_server.py  runtime_engine.py
src/mcpruntime/tools/: __init__.py  get_server_tools.py  list_servers.py  poll_task.py  search_servers.py  search_tools.py
tests/: conftest.py  test_content_manager.py  test_discovery_client.py
