[project]
name = "mcp-runtime"
version = "0.1.0"
description = "MCP execution runtime with lifecycle management"
readme = "README.md"
authors = [
    { name = "BA Ibrahima", email = "ibrahima.ba@ouest-france.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.3.0",
    "pyzmq>=26.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "tiktoken>=0.8.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
]

[project.scripts]
mcp-runtime = "mcpruntime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpruntime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
